<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">单词拼图</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- 基础功能 -->
    <string name="back">返回</string>
    <string name="option">选项</string>
    <string name="position">位置</string>
    <string name="init_lexicon">导入词库中···</string>

    <!-- 游戏 -->
    <string name="head_portrait">头像</string>
    <string name="score_with_symbol">得分:%1$s</string>
    <string name="rate_with_symbol">进度:%1$s</string>
    <string name="update">换一批</string>
    <string name="change_picture">更换图片</string>
    <string name="start_puzzle">开始拼图</string>
    <string name="go_on">继续</string>
    <string name="give_up">放弃</string>
    <string name="show">炫耀</string>
    <string name="win_tip">恭喜，您本次用时%1$s，特发奖状，以资鼓励。您目前最佳纪录为%2$s。再接再厉哦！</string>
    <string name="lose_tip">本次挑战失败。别灰心，再接再厉啊！</string>

    <!-- title -->
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_result_lose">ResultLoseActivity</string>
    <string name="title_activity_option">模式选择</string>
    <string name="title_activity_choose_lexicon">选择题库</string>
    <string name="title_activity_set_game_bg">设置背景图</string>

    <string name="btn_normal_mode">普通模式（60s）</string>
    <string name="btn_pro_mode">挑战模式（30s）</string>
    <string name="txt_set_bg_from_local">从本地选择图片</string>
    <string name="txt_set_bg_hint">点击图片设定拼图背景</string>
    <string name="txt_set_bg_from_local_hint_no_1">1.</string>
    <string name="txt_set_bg_from_local_hint_no_2">2.</string>
    <string name="txt_set_bg_from_local_hint_no_3">3.</string>
    <string name="txt_set_bg_from_local_hint_1">不要选择太花的图片</string>
    <string name="txt_set_bg_from_local_hint_2">不要选择切成九宫图以后会出现两块相同的图块的图片</string>
    <string name="txt_set_bg_from_local_hint_3">图片的颜色与游戏文字颜色尽量选择差别较大的两种颜色</string>
    <string name="txt_set_bg_help"><u>温馨提示</u></string>
    <string name="title_txt_set_bg_help">温馨提示</string>
    <string name="txt_txv_close">X</string>
    <string name="txt_txv_sys_bg">系统推荐背景</string>
    <string name="txt_set_color_white">白色</string>
    <string name="txt_set_color_black">黑色</string>
    <string name="launch_slogan_weixin">更多好玩小游戏，请关注微信公众号：wordgame</string>
    <string name="launch_slogan_qq">QQ客服：3124201561</string>
</resources>
