<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutPopView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_border_single">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imvSetBgFromLocalHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_msg"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:id="@+id/textViewSetBgFromLocalHint"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/general_line_height"
                android:gravity="right|center"
                android:layout_toRightOf="@id/imvSetBgFromLocalHint"
                android:text="@string/title_txt_set_bg_help"
                android:clickable="true"
                style="@style/TitleTextTheme"/>
            <TextView
                android:id="@+id/textViewClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_txv_close"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textColor="@drawable/txt_color_txv_url"
                android:textSize="@dimen/ts_big"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_top_border_single"
            android:padding="10dp"
            android:layout_margin="1dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_no_1"
                    style="@style/GeneralTextTheme"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_1"
                    style="@style/GeneralTextTheme"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_no_2"
                    style="@style/GeneralTextTheme"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_2"
                    style="@style/GeneralTextTheme"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_no_3"
                    style="@style/GeneralTextTheme"
                    android:layout_marginRight="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_set_bg_from_local_hint_3"
                    style="@style/GeneralTextTheme"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>