<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title"
        layout="@layout/widget_title_base" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_award"
            android:src="@drawable/awards"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="150dp"
            android:text="@string/win_tip"
            android:id="@+id/tv_win_tip"
            android:textSize="@dimen/ts_bigger"
            android:textColor="@color/black" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_btn_height"
        android:text="@string/show"
        android:id="@+id/btnShow"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_general_btn"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        style="@style/GeneralButtonTextTheme"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_btn_height"
        android:text="@string/go_on"
        android:id="@+id/btnContinue"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bg_general_btn"
        android:layout_above="@id/btnShow"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        style="@style/GeneralButtonTextTheme"/>

</RelativeLayout>