<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title"
        layout="@layout/widget_title_base" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_margin="10dp"
        android:id="@+id/rl_info">

        <ImageView
            android:contentDescription="@string/head_portrait"
            android:layout_width="@dimen/head_portrait_width"
            android:layout_height="@dimen/head_portrait_height"
            android:id="@+id/iv_head_portrait"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_head_portrait"
            android:layout_alignBottom="@+id/iv_head_portrait"
            android:layout_toRightOf="@+id/iv_head_portrait">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_with_symbol"
                    android:id="@+id/tv_score"
                    android:textSize="@dimen/ts_bigger"
                    android:textColor="@color/red"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_with_symbol"
                    android:id="@+id/tv_rate"
                    android:textSize="@dimen/ts_bigger"
                    android:textColor="@color/red"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:id="@+id/ll_control">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:id="@+id/tv_update"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/ts_bigger"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_puzzle"
                    android:id="@+id/tv_control"
                    android:padding="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/ts_bigger"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/rl_info"
        android:id="@+id/pb_time"/>

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gv_puzzle"
        android:layout_margin="10dp"
        android:numColumns="3"
        android:layout_below="@+id/pb_time"
        android:horizontalSpacing="5dp"
        android:verticalSpacing="5dp"/>

</RelativeLayout>
