<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/relativeLayoutMain">

    <include
        android:id="@+id/title"
        layout="@layout/widget_title_base" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/relativeLayoutSelectFromLocal"
        android:layout_below="@id/title"
        android:background="@drawable/bg_set_bg_from_local"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/imgViewRight"
            android:layout_width="@dimen/general_line_height"
            android:layout_height="@dimen/general_line_height"
            android:src="@drawable/img_right_normal"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/general_line_height"
            android:gravity="left|center"
            android:text="@string/txt_set_bg_from_local"
            style="@style/GeneralTextTheme"
            android:layout_toLeftOf="@id/imgViewRight"
            android:singleLine="true"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayoutSetBgFromLocalHintWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayoutSelectFromLocal"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:id="@+id/textViewSetBgFromLocalHint"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/general_line_height"
            android:gravity="right|center"
            android:layout_alignParentRight="true"
            android:text="@string/txt_set_bg_help"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:textSize="@dimen/ts_small"
            android:textColor="@drawable/txt_color_txv_url"/>
        <ImageView
            android:id="@+id/imvSetBgFromLocalHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/textViewSetBgFromLocalHint"
            android:src="@drawable/img_msg"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayoutSetBgFromLocalHintWrapper"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >
        <TextView
            android:id="@+id/textViewSysBgTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/general_line_height"
            android:text="@string/txt_txv_sys_bg"
            style="@style/GeneralTextTheme"
            android:gravity="left|center"
            android:background="@drawable/bg_bottom_border_single"/>
        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textViewSysBgTitle"
            android:numColumns="3"
            android:horizontalSpacing="5dp"
            android:verticalSpacing="5dp"
            android:paddingTop="5dp"
            android:paddingRight="6dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbarThumbVertical="@drawable/bg_scrollbar_thumb_vertical"/>
    </RelativeLayout>

</RelativeLayout>
