<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/title"
        layout="@layout/widget_title_base" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:id="@+id/imgPuzzleBgWrapper"
                android:background="@drawable/bg_game_bg_wrapper"
                android:clickable="true">
                <ImageView
                    android:id="@+id/imgPuzzleBg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_game_sys_1"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/textViewSetBgHint"
                android:layout_width="match_parent"
                android:layout_height="@dimen/general_line_height"
                android:layout_below="@id/imgPuzzleBgWrapper"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="right|center"
                android:text="@string/txt_set_bg_hint"
                style="@style/CommentTextTheme"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/relativeLayoutSetTextColor"
                android:background="@drawable/bg_set_bg_from_local"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:layout_below="@id/textViewSetBgHint">
                <ImageView
                    android:id="@+id/imgViewRight"
                    android:layout_width="@dimen/general_line_height"
                    android:layout_height="@dimen/general_line_height"
                    android:src="@drawable/img_right_normal"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:id="@+id/txvSetColor"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/general_btn_height"
                    android:gravity="left|center"
                    style="@style/GeneralTextTheme"
                    android:layout_alignParentLeft="true"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/txvSetColor"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:background="@drawable/bg_border_single">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:id="@+id/txvColor"/>
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_below="@id/relativeLayoutSetTextColor">
                <Button
                    android:id="@+id/btnNormal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/general_btn_height"
                    android:text="@string/btn_normal_mode"
                    android:background="@drawable/bg_general_btn"
                    style="@style/GeneralButtonTextTheme"/>
                <Button
                    android:id="@+id/btnPro"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/general_btn_height"
                    android:layout_below="@id/btnNormal"
                    android:text="@string/btn_pro_mode"
                    android:background="@drawable/bg_general_btn"
                    android:layout_marginTop="15dp"
                    style="@style/GeneralButtonTextTheme"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
